# ASCII-World

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  pages.yml
assets/fonts/: Noto-CJK-License.txt
docs/: BENCHMARK.md
docs/images/: robot_88.txt
examples/: bench_convert.rs
src/: anim.rs  charset.rs  engine.rs  font.rs  input.rs  lib.rs  main.rs  mcp.rs  paint.rs  render.rs  video.rs  wasm.rs
tests/: e2e.rs
web/: README.md  index.html
